--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@
 /storage/framework/views/
 /storage/logs/
 /storage/app/
+/storage/framework/cache/
+/storage/framework/sessions/
+/storage/framework/testing/
+/bootstrap/cache/
 /vendor
 Homestead.json
 Homestead.yaml
