Fix .htaccess for subdirectory deployment

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,5 @@
 RewriteEngine On
 
-# Redirect to public directory
+# Redirect all requests to public directory
 RewriteCond %{REQUEST_URI} !^/regmail-app/public/
-RewriteRule ^(.*)$ /regmail-app/public/$1 [L]
-
-# Alternative: If you want to serve from public directory directly
-# RewriteCond %{REQUEST_URI} !^/regmail-app/public/
-# RewriteRule ^(.*)$ /regmail-app/public/index.php [L]
+RewriteRule ^(.*)$ /regmail-app/public/index.php [L]
